--- a/package.json
+++ b/package.json
@@ -42,6 +42,12 @@
     "tailwindcss-debug-screens": "^2.2.1"
   },
   "pnpm": {
+    "allowBuild": [
+      "contentlayer",
+      "esbuild",
+      "protobufjs",
+      "rome"
+    ],
     "overrides": {
       "@opentelemetry/api": "1.4.1",
       "@opentelemetry/core": "1.13.0",
